clean up LitPop tutorial

--- a/doc/tutorial/climada_entity_LitPop.ipynb
+++ b/doc/tutorial/climada_entity_LitPop.ipynb
@@ -11,19 +11,21 @@
    "source": [
     "# LitPop class\n",
     "\n",
-    "This class is a data model of economic exposure. It models countries' gridded exposure by interpolating an macroeconomic indicator through the product of night light intensities and gridded population count for a specific year. Asset value is distributed to the grid proportzional to LitPop. LitPop at each pixel is calculated in the script as:\n",
+    "This class is a data model of economic asset exposure. It models countries' gridded asset exposure by disaggregating a macroeconomic indicator (e.g. total asset value or GDP) proportional to the product of night light intensities (\"Lit\") and gridded population count (\"Pop\") per country. Asset value is distributed to the grid proportzonal to $Lit^m Pop^n$, computed at each grid cell:\n",
     "\n",
     "\n",
     "$Lit^mPop^n = Lit^m * Pop^n$, with $exponents = [m, n] \\in \\N_0$ (Default values are $m=n=1$).\n",
     "\n",
     "\n",
-    "The night light images used are the following (NASA Black Marble):\n",
-    "- year 2012 and 2016: https://earthobservatory.nasa.gov/Features/NightLights (15 arcsec resolution (~500m))\n",
+    "For more information please refer to the related publication (under review): https://doi.org/10.5194/essd-2019-189\n",
     "\n",
-    "The gridded population count data used are the following:\n",
-    "- Gridded Population of the World (GPW), v4: Population Count, v4.10, v4.11 or later versions (2000, 2005, 2010, 2015, 2020)\n",
-    "http://sedac.ciesin.columbia.edu/data/collection/gpw-v4/sets/browse\n",
-    "To access older versions (i.e. v4.10 that was used for the published data set), please see SEDAC's Beta site:\n",
+    "## Input data:\n",
+    "\n",
+    "Nithlights: Black Marble 2016 annual composite of the VIIRS day-night band (DNB) at 15 arcsec resolution downloaded automatically from the NASA Earth Observatory:\n",
+    "https://earthobservatory.nasa.gov/Features/NightLights (available for 2012 and 2016 at 15 arcsec resolution (~500m))\n",
+    "\n",
+    "Population: Gridded Population of the World (GPW), v4: Population Count, v4.10, v4.11 or later versions (2000, 2005, 2010, 2015, 2020), available from http://sedac.ciesin.columbia.edu/data/collection/gpw-v4/sets/browse.\n",
+    "To access older versions of GPW (v4.10 as used for the published data set), please see SEDAC's Beta site:\n",
     "https://beta.sedac.ciesin.columbia.edu/data/collection/gpw-v4/sets/browse\n",
     "\n",
     "The GPW file of the year closest to the target year is required.\n",
@@ -49,19 +51,20 @@
     "\n",
     "Regarding the GDP (nominal GDP at current USD) and income group values, they are obtained from the [World Bank](https://data.worldbank.org) using the [pandas-datareader](https://pandas-datareader.readthedocs.io/en/latest/remote_data.html) API. If a value is missing, the value of the closest year is considered. When no values are provided from the World Bank, we use the [Natural Earth](https://www.naturalearthdata.com) repository values.\n",
     "\n",
-    "\n",
-    "_Initiating LitPop():_\n",
-    "\n",
-    "The `LitPop` class inherits from the [`Exposures`](climada_entity_Exposures.ipynb#Exposures-class) class. It provides a `set_country()` method which enables to compute exposure data for a country using different settings and input data. The first time a nightlight image is used, it is downloaded and stored locally. This might take some time.\n",
-    "\n",
-    "*NOTE / Downloading existing LitPop exposure data:*\n",
+    "## Downloading existing LitPop asset exposure data\n",
     "\n",
     "Readily computed LitPop asset exposure data based on $Lit^1Pop^1$ for 224 countries, distributing produced capital / non-financial wealth of 2014 at a resolution of 30 arcsec can be downloaded from the ETH Research Repository: https://doi.org/10.3929/ethz-b-000331316.\n",
     "The dataset contains gridded data for more than 200 countries as CSV files. [These can be imported into Python using the Exposures class, i.e. *Exposures(pd.read_csv(file_name))*]\n",
     "\n",
     "\n",
     "Please refer to and quote the related publication if you are using LitPop exposure data in your studies:\n",
-    "https://doi.org/10.5194/essd-2019-189.\n"
+    "https://doi.org/10.5194/essd-2019-189.\n",
+    "\n",
+    "\n",
+    "## Initiating LitPop()\n",
+    "\n",
+    "The `LitPop` class inherits from the [`Exposures`](climada_entity_Exposures.ipynb#Exposures-class) class. It provides a `set_country()` method which enables to compute exposure data for a country using different settings and input data. The first time a nightlight image is used, it is downloaded and stored locally. This might take some time.\n",
+    "\n"
    ]
   },
   {
@@ -1022,7 +1025,7 @@
     "resolution = 600\n",
     "ent = lp.LitPop()\n",
     "ent.set_country(country_name, res_arcsec=resolution)\n",
-    "ent = lp.exposure_set_admin1(ent, 600)\n",
+    "ent = lp.exposure_set_admin1(ent, resolution)\n",
     "# Print first 10 entries:\n",
     "print(ent.iloc[0:10])\n",
     "# Select district of Rangpur only and plot exposure:\n",
