clean up LitPop tutorial continued

--- a/doc/tutorial/climada_entity_LitPop.ipynb
+++ b/doc/tutorial/climada_entity_LitPop.ipynb
@@ -21,12 +21,11 @@
     "\n",
     "## Input data:\n",
     "\n",
-    "Nithlights: Black Marble 2016 annual composite of the VIIRS day-night band (DNB) at 15 arcsec resolution downloaded automatically from the NASA Earth Observatory:\n",
-    "https://earthobservatory.nasa.gov/Features/NightLights (available for 2012 and 2016 at 15 arcsec resolution (~500m))\n",
+    "All required data except for the population data (GPW) is acquired automatically when LitPop is initiated.\n",
     "\n",
-    "Population: Gridded Population of the World (GPW), v4: Population Count, v4.10, v4.11 or later versions (2000, 2005, 2010, 2015, 2020), available from http://sedac.ciesin.columbia.edu/data/collection/gpw-v4/sets/browse.\n",
-    "To access older versions of GPW (v4.10 as used for the published data set), please see SEDAC's Beta site:\n",
-    "https://beta.sedac.ciesin.columbia.edu/data/collection/gpw-v4/sets/browse\n",
+    "*Nithlights*: Black Marble 2016 annual composite of the VIIRS day-night band (DNB) at 15 arcsec resolution is downloaded from the NASA Earth Observatory: https://earthobservatory.nasa.gov/Features/NightLights (available for 2012 and 2016 at 15 arcsec resolution (~500m))\n",
+    "\n",
+    "*Population*: Gridded Population of the World (GPW), v4: Population Count, v4.10, v4.11 or later versions (2000, 2005, 2010, 2015, 2020), available from http://sedac.ciesin.columbia.edu/data/collection/gpw-v4/sets/browse.\n",
     "\n",
     "The GPW file of the year closest to the target year is required.\n",
     "To download GPW data you need to register on the SEDAC website (for free).\n",
@@ -36,11 +35,9 @@
     "The population data from GWP needs to be downloaded manually as TIFF from this site and placed in the system data folder of climada, i.e.: climada_python/data/system/gpw_v4_population_count_rev11_2015_30_sec.tif.\n",
     "\n",
     "Direct download links are avilable, also for older versions, i.e.:\n",
-    "http://sedac.ciesin.columbia.edu/downloads/data/gpw-v4/gpw-v4-population-count-rev10/gpw-v4-population-count-rev10_2015_30_sec_tif.zip, \n",
-    "or: \n",
-    "http://sedac.ciesin.columbia.edu/downloads/data/gpw-v4/gpw-v4-population-count-rev11/gpw-v4-population-count-rev11_2015_30_sec_tif.zip\n",
-    "\n",
-    "All other required data is acquired automatically.\n",
+    "- v4.11: http://sedac.ciesin.columbia.edu/downloads/data/gpw-v4/gpw-v4-population-count-rev11/gpw-v4-population-count-rev11_2015_30_sec_tif.zip\n",
+    "- v4.10: http://sedac.ciesin.columbia.edu/downloads/data/gpw-v4/gpw-v4-population-count-rev10/gpw-v4-population-count-rev10_2015_30_sec_tif.zip, \n",
+    "- Overview over all versions of GPW v.4: https://beta.sedac.ciesin.columbia.edu/data/collection/gpw-v4/sets/browse\n",
     "\n",
     "Available macroeconomic indicators can be selected via the variable fin_mode:\n",
     "- 'pc': produced capital (Source: World Bank DataBank), incl. manufactured or built assets such as machinery, equipment, and physical structures (pc is in constant 2014 USD, data is available for the years 1995, 2000, 2005, 2010, 2014). The pc-data is stored in the subfolder *data/system/Wealth-Accounts_CSV/*. Source: https://datacatalog.worldbank.org/dataset/wealth-accounting\n",
