use shorter import path for LitPop

--- a/doc/tutorial/climada_entity_LitPop.ipynb
+++ b/doc/tutorial/climada_entity_LitPop.ipynb
@@ -73,14 +73,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-01-31 10:59:32,239 - climada - DEBUG - Loading default config file: /Users/eberenzs/Documents/Projects/climada_python/climada/conf/defaults.conf\n"
+      "2020-05-11 10:21:54,916 - climada - DEBUG - Loading default config file: /Users/eberenzs/Documents/Projects/climada_python/climada/conf/defaults.conf\n"
      ]
     }
    ],
@@ -91,7 +91,7 @@
     "from matplotlib import colors\n",
     "from iso3166 import countries as iso_cntry\n",
     "\n",
-    "from climada.entity.exposures.litpop import LitPop"
+    "from climada.entity import LitPop"
    ]
   },
   {
