tutorial: clean up crop tutorial

--- a/doc/tutorial/climada_hazard_RelativeCropyield_entity_CropProduction.ipynb
+++ b/doc/tutorial/climada_hazard_RelativeCropyield_entity_CropProduction.ipynb
@@ -26,17 +26,7 @@
     "\n",
     "*Hazard intensity* is defined as yearly crop yield relative to a historical mean simulated with the same model combination. Each model year represents one event in the hazard instance. The required data sets are available from https://esg.pik-potsdam.de/search/isimip/ (choose *Variable = yield* for crop yield and *landuse-15crops* for land use data).\n",
     "\n",
-    "In this tutorial we show how a *RelativeCropyield* and a *CropProduction* instance can be initiated and translated into socio-economic impacts in the form of (yearly) crop production losses / gains in tonnes or USD.\n",
-    "\n",
-    "Besides, all other general Hazard Attributes, the class *RelativeCropyield()* has further Attributes related to the crop type and intensity definition:\n",
-    "\n",
-    "- crop            (str): crop type, e.g. 'whe', 'mai', 'soy', or 'ric'.\n",
-    "\n",
-    "- intensity_def   (str): intensity unit definition:\n",
-    "                            - 'Relative Yield' (unitless)\n",
-    "                            - 'Yearly Yield' [t/(y*ha)]\n",
-    "                            - 'Percentile' [t/(y*ha)]\n",
-    "  "
+    "In this tutorial we show how a *RelativeCropyield* and a *CropProduction* instance can be initiated and translated into socio-economic impacts in the form of (yearly) crop production losses / gains in tonnes or USD."
    ]
   },
   {
@@ -69,6 +59,12 @@
     "                f.i. 'co2' or '2005co2'\n",
     "            crop (str): crop type, e.g. 'whe', 'mai', 'soy' or 'ric'\n",
     "            irr (str): irrigation type, e.g. 'noirr' or 'irr'\n",
+    "\n",
+    "In addition to the general attributes of the *Hazard()* class, the class *RelativeCropyield()* has further attributes related to the crop type and intensity definition:\n",
+    "           \n",
+    "            crop (str): crop type, e.g. 'whe', 'mai', 'soy', or 'ric';\n",
+    "            intensity_def (str): intensity unit definition, either \n",
+    "                'Relative Yield' (unitless), 'Yearly Yield' [t/(y*ha)], or 'Percentile' [t/(y*ha)]\n",
     "\n",
     "To convert intensity to 'Relative Yield', the methods *calc_mean()* and *set_rel_yield_to_int()* can be applied as shown below. This is required for most teh impact calculation in combination with *CropProduction(Exposure)*.\n",
     "\n",
@@ -286,6 +282,11 @@
     "                f.i 'USD' or 't'\n",
     "            fn_str_var (string): FileName STRing depending on VARiable and\n",
     "                ISIMIP simuation round\n",
+    "\n",
+    "In addition to the general attributes of the *Exposures()* class, the class *CropProduction()* has one further attribute related:\n",
+    "           \n",
+    "            crop (str): crop type, e.g. 'whe', 'mai', 'soy', or 'ric'\n",
+    "\n",
     "\n",
     "Below two examples for initiating an hazard instance and setting intensity to relative yield:"
    ]
