tutorial: clean up crop tutorial 3

--- a/doc/tutorial/climada_hazard_RelativeCropyield_entity_CropProduction.ipynb
+++ b/doc/tutorial/climada_hazard_RelativeCropyield_entity_CropProduction.ipynb
@@ -70,11 +70,12 @@
     "\n",
     "To initiate one or more hazard files from a variety of model runs, a more convenient function is available:\n",
     "*climada.hazard.relative_cropyield.init_full_hazard_set()*, setting intensity to 'Relative Yield' for you.\n",
-    "\n",
-    "The method init_full_hazard_set extracts all model specifications directly from the filenames. Thus, it only requires the following inputs:\n",
+    "The function *init_full_hazard_set()* extracts all model specifications directly from the filenames. Thus, it only requires the following inputs:\n",
     "\n",
     "            input_dir (str): path to input data directory\n",
-    "            output_dir (str): path to input data directory (hazard sets are saved there in HDF5-format)\n",
+    "            output_dir (str): path to output data directory (hazard sets are saved there in HDF5-format)\n",
+    "            returns (str): set to 'all' if you want the function to return a list containing the hazard sets \n",
+    "            \n",
     "\n",
     "Below two examples for initiating an hazard instance and setting intensity to relative yield:"
    ]
