--- a/doc/tutorial/climada_hazard_RelativeCropyield_entity_CropProduction.ipynb
+++ b/doc/tutorial/climada_hazard_RelativeCropyield_entity_CropProduction.ipynb
@@ -199,7 +199,7 @@
     "\n",
     "These files contain historical and RCP6.0 future simulations for _rice_ yield, both for fully irrigated (\"firr\") and no irrigation (\"noirr\"). Forcing climate model: _gfdl-esm2m_. Crop model: _gepic_.\n",
     "\n",
-    "Please note: when calling *init_full_hazard_set()*. the historical mean (hist_mean) is averaged over all model combinations for each crop and irrigation type."
+    "Please note: when calling *init_full_hazard_set()*. the historical mean (hist_mean) is averaged over all model combinations for each crop and irrigation type. Like this, a cross-model exposure can be initiated using this model average of hist_mean as input."
    ]
   },
   {
@@ -276,13 +276,24 @@
     ]
    },
    "source": [
-    "## Generating a CropProduction Exposure\n",
+    "## CropProduction Exposure\n",
+    "\n",
+    "\n",
+    "The *CropProduction* exposure data combines these main input data:\n",
+    "- harvest area fraction (from landuse data): fraction of grid cell area where a crop is grown with / without irrigation, unitless;\n",
+    "- total grid cell area [$ha$]: computed from grid;\n",
+    "- historical mean yield (hist_mean): simulated crop yield with / without irrigation per grid cell, usually averaged over several model combinations and years, can be initiated with function *init_full_hazard_set* [$t / (ha * y)$];\n",
+    "- crop production price from FAO when unit is USD [$USD / t$].\n",
+    "\n",
+    "Crop production = fraction * area * hist_mean * price\n",
+    "\n",
+    "[$USD / y = ha * t / (ha * y) * USD / t$]\n",
     "\n",
     "The method *set_from_single_run()* generates a *Exposure* instance for one crop type and irrigation parameter, with unit 't/year' or 'USD/year'.\n",
     "This requires multiple input parameters:\n",
     "\n",
     "            input_dir (string): path to input data directory\n",
-    "            filename (string): name of the land use file to use,\n",
+    "            filename (string): name of the landuse-file to use,\n",
     "                e.g. \"histsoc_landuse-15crops_annual_1861_2005.nc\"\n",
     "            hist_mean (array): historic mean crop yield per centroid (from hazard)\n",
     "            bbox (list of four floats): bounding box:\n",
@@ -302,6 +313,7 @@
     "                f.i 'USD' or 't'\n",
     "            fn_str_var (string): FileName STRing depending on VARiable and\n",
     "                ISIMIP simuation round\n",
+    "\n",
     "\n",
     "In addition to the general attributes of the *Exposures()* class, the class *CropProduction()* has one further attribute related:\n",
     "           \n",
@@ -712,7 +724,7 @@
     ]
    },
    "source": [
-    "## Computing impact: Deviation in yearly crop production \n"
+    "## Impact: Deviation in yearly crop production \n"
    ]
   },
   {
