climada_hazard_entity_Crop.ipynb: update method name generate_full_hazard_set() in tutorial

--- a/doc/tutorial/climada_hazard_entity_Crop.ipynb
+++ b/doc/tutorial/climada_hazard_entity_Crop.ipynb
@@ -82,8 +82,8 @@
     "To convert intensity to 'Relative Yield', the methods *calc_mean()* and *set_rel_yield_to_int()* can be applied as shown below. Attention: This is required for impact calculations in combination with *CropProduction(Exposure)*.\n",
     "\n",
     "To initiate one or more hazard files from a variety of model runs, a more convenient function is available:\n",
-    "*climada.hazard.relative_cropyield.init_full_hazard_set()*, setting intensity to 'Relative Yield' for you.\n",
-    "The function *init_full_hazard_set()* extracts all model specifications directly from the filenames. Thus, it only requires the following inputs:\n",
+    "*climada.hazard.relative_cropyield.generate_full_hazard_set()*, setting intensity to 'Relative Yield' for you.\n",
+    "The function *generate_full_hazard_set()* extracts all model specifications directly from the filenames. Thus, it only requires the following inputs:\n",
     "\n",
     "            input_dir (str): path to input data directory\n",
     "            output_dir (str): path to output data directory (hazard sets are saved there in HDF5-format)\n",
@@ -191,7 +191,7 @@
    "source": [
     "###  Initiate a relative yield hazard set from multiple input files:\n",
     "\n",
-    "- using *init_full_hazard_set()*, which creates hazard sets from all NetCDF-files found in the input directory\n",
+    "- using *generate_full_hazard_set()*, which creates hazard sets from all NetCDF-files found in the input directory\n",
     "- in this example, I used the output from GGCM GEPIC forced with GFDL-ESM2M output for rice, both irrigated and non-irrigated. You can however also run the script with other data sets of the same format.\n",
     "\n",
     "Requires data download from https://esg.pik-potsdam.de/search/isimip/:\n",
@@ -258,7 +258,7 @@
    "source": [
     "from pathlib import Path\n",
     "from climada.util.constants import DATA_DIR\n",
-    "from climada.hazard.relative_cropyield import init_full_hazard_set\n",
+    "from climada.hazard.relative_cropyield import generate_full_hazard_set\n",
     "\n",
     "\n",
     "data_path = Path(DATA_DIR) / \"ISIMIP_crop\" # set path of working data directory \n",
@@ -268,8 +268,8 @@
     "output_dir = data_path / \"Output\" # set output directory\n",
     "path_hist_mean = output_dir / \"Hist_mean\" # set output directory for hist_mean\n",
     "\n",
-    "\n",
-    "filelist_haz, hazards_list = init_full_hazard_set(input_dir=input_haz_dir, output_dir=output_dir, return_data=True)\n",
+    "filelist_haz, hazards_list = generate_full_hazard_set(input_dir=input_haz_dir, output_dir=output_dir,\n",
+    "                                                      isimip_run='ISIMIP2b', return_data=True)\n",
     "\n",
     "print(\"\\nComputed and saved the following files: \\n\")\n",
     "print(filelist_haz)\n",
@@ -295,7 +295,7 @@
     "For creating an exposure instance, the following main input data are combined:\n",
     "- harvest area fraction (from landuse data): fraction of grid cell area where a crop is grown with / without irrigation, unitless;\n",
     "- total grid cell area [$ha$]: computed from grid;\n",
-    "- historical mean yield (hist_mean): simulated crop yield with / without irrigation per grid cell, usually averaged over several model combinations and years, can be initiated with function *init_full_hazard_set* [$t / (ha * y)$];\n",
+    "- historical mean yield (hist_mean): simulated crop yield with / without irrigation per grid cell, usually averaged over several model combinations and years, can be initiated with function *generate_full_hazard_set* [$t / (ha * y)$];\n",
     "- crop production price from FAO when unit is USD $[USD / t]$.\n",
     "\n",
     "Crop production = fraction * area * hist_mean * price\n",
@@ -501,7 +501,7 @@
     "- Countries: all; Items: \"Rice, paddy\"; Elements: \"Production Quantity\", Years: 2008 to 2018.\n",
     "- save as FAOSTAT_data_production_quantity.csv in your local input data directory (*input_exp_dir*)\n",
     "\n",
-    "Please note: when calling *init_full_hazard_set()*. the historical mean (hist_mean) required here is averaged over all model combinations for each crop and irrigation type. This means that the exposure per crop type and irrigation type represents an average over all model ciombinations used.\n",
+    "Please note: when calling *generate_full_hazard_set()*. the historical mean (hist_mean) required here is averaged over all model combinations for each crop and irrigation type. This means that the exposure per crop type and irrigation type represents an average over all model ciombinations used.\n",
     "\n",
     "#### Normalization:\n",
     "It is possible to normalize the crop production per country with FAO data using *normalize_with_fao_cp()* and *normalize_several_exp()* for multiple exposure pairs.\n",
@@ -688,7 +688,7 @@
     "from iso3166 import countries as iso_cntry\n",
     "\n",
     "from climada.util.constants import DATA_DIR\n",
-    "from climada.hazard.relative_cropyield import init_full_hazard_set\n",
+    "from climada.hazard.relative_cropyield import generate_full_hazard_set\n",
     "from climada.entity.exposures.crop_production import init_full_exposure_set, normalize_several_exp\n",
     "\n",
     "data_path = Path(DATA_DIR) / 'ISIMIP_crop' # set path of working data directory \n",
@@ -701,7 +701,7 @@
     "\n",
     "# # only required if hazard set has not yet been initiated above:\n",
     "#---------------------------------------------------------------\n",
-    "#init_full_hazard_set(input_dir=input_haz_dir, output_dir=output_dir)\n",
+    "# generate_full_hazard_set(input_dir=input_haz_dir, output_dir=output_dir)\n",
     "# \"\"\"compute historical mean yield for all runs available in input_haz directory\"\"\"\n",
     "#---------------------------------------------------------------\n",
     "\n",
